more on F and f

--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -247,3 +247,11 @@
   pages={27--53},
   year={2021}
 }
+
+@book{newton1999principia,
+  title={The Principia: mathematical principles of natural philosophy},
+  author={Newton, Isaac},
+  year={1999},
+  publisher={Univ of California Press}
+}
+
