--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -232,6 +232,12 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 \newcommand{\cH}{\mathcal{H}}
 
 
+% dot of variable size, from
+% https://tex.stackexchange.com/questions/389238/is-there-a-black-dot-symbol-that-i-can-use
+\newcommand\vardot[1][.4]{\mathbin{\vcenter{\hbox{\scalebox{#1}{$\bullet$}}}}}
+% dot above equality sign for Newton style
+\renewcommand{\doteq}{\mathrel{\overset{\vardot}{=}}}
+
 
 % from Blitzstein
 
@@ -268,6 +274,12 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 
 
 \newcommand{\addtag}[1]{\index{#1}}
+
+
+% hack from
+% https://tex.stackexchange.com/questions/14501/making-footnote-work-in-leftbar-environment/
+% does not work with hyperref?
+% \input{footnote-in-leftbar.tex}
 
 \title{Заметки к семинарам по вероятностям}
 \author{\url{https://github.com/bdemeshev/probability_pro} \\
@@ -2291,6 +2303,12 @@ $\cF=\{\emptyset, \Omega, \{\text{дождь}\}, \{\text{солнечно}, \tex
 
 \section{К чёрту условности!}
 
+\begin{leftbar}
+Условная вероятность, $\P(A \mid B) = \P(A \cap B) / \P(B)$. События называются \textit{независимыми}, если $\P(A \cap B) = \P(A) \cdot \P(B)$.
+Определение независимости событий равносильно формуле $\P(A \mid B) = \P(A)$ при $\P(B) > 0$.
+\end{leftbar}
+
+
 
 \begin{problem}
 Перед Петей три монетки. Две «правильных» и одна — с «орлами» по обеим сторонам.
@@ -2542,11 +2560,38 @@ $ 2/3 $, $1/2$, $ 1/2 $, $ 14/27 $
   \item Чему равно ожидаемое общее количество сделанных за игру бросков, если за время игры ни разу не выпало нечётное число?
   \item Как изменится ответ, если за время игры было $a$ нечётных бросков?
 \end{enumerate}
-  \begin{sol}
+\begin{sol}
 \url{http://www.yichijin.com/files/elchanan.pdf}
 \end{sol}
 \end{problem}
 
+
+\begin{problem}
+В турнире играют 20 команд разной силы. 
+В первой встрече играют две случайные команды.
+Далее проигравшая команда выбывает, 
+а команда-победитель встречается со случайной новой командой,
+до тех пор пока не останется одна команда.
+Во встрече двух команд всегда побеждает сильнейшая. 
+
+\begin{enumerate}
+  \item Какова вероятность того, что команда, игравшая первую встречу, одержит всего как минимум 7 побед? 
+  \item Какова вероятность того, что команда, игравшая первую встречу, одержит всего ровно 7 побед? 
+  \item Какова вероятность того, что команда, игравшая первую встречу и одержавшая 7 побед, победит в следующей встрече?
+\end{enumerate}
+\begin{sol}
+  Назовём команды, играющие в первой партии $T_1$ и $T_2$, 
+  команду вступающую во вторую игру — $T_3$, и так далее. 
+
+\begin{enumerate}
+    \item Какова вероятность того, что команда, игравшая первую встречу, одержит как минимум 7 побед? 
+    \item Какова вероятность того, что команда, игравшая первую встречу, одержит ровно 7 побед? 
+    \item Какова вероятность того, что команда, игравшая первую встречу и одержавшая 7 побед, победит в следующей встрече?
+\end{enumerate}
+  
+\end{sol}
+\end{problem}
+  
 
 
 
@@ -2598,19 +2643,24 @@ $ 2/3 $, $1/2$, $ 1/2 $, $ 14/27 $
 \newpage
 \section{Эф большое и эф малое}
 
-Минитеория:
+
+\begin{leftbar}
+У каждой случайной величины есть \textit{функция распределения}, $F_X(t) = \P(X \leq t)$, $\P(a < X \leq b) = F(b) - F(a)$.
+У \textit{абсолютно непрерывной случайной величины} есть \textit{функция плотности},
+$f_X(t)$, $\P(X \in [a;b]) = \int_a^b f(t) dt$ или $\P(X \in [x; x+ \Delta]) \doteq f(x) \cdot \Delta$.
 
 
-\begin{enumerate}
-\item $F_X(t) = \P(X \leq t)$
-\item  $F(t) = \int_{-\infty}^ t f(a) \, da$, $f(t)=F'(t)$.
-\end{enumerate}
+Здесь мы популяризируем мощный стиль сэра Исаак Ньютона \autocite{newton1999principia} в современных обозначениях!
+Запись $a \doteq b$ означает, что величины $a$ и $b$ предельно равны, то есть $\lim_{\Delta \to 0} \frac{a}{b} = 1$.
 
 
-Задачи:
+Между функциями распределения и плотности есть связь, $F'(x) = f(x)$, $\int_{-\infty}^x f(t) \, dt = F(x)$.
+\addtag{функция распределения} \addtag{функция плотности}
+\end{leftbar}
 
 \begin{problem}
-Функция плотности случайной величины $X$ равна $5$ при $x=7$. Найдите примерно вероятность того, что $X$ попадёт в отрезок $[7;7.001]$.
+Функция плотности случайной величины $X$ равна $5$ при $x=7$.
+Найдите примерно вероятность того, что $X$ попадёт в отрезок $[7;7.001]$.
 \begin{sol}
 Так как о функции плотности нам известно только её значение в точке, лучшим приближением значения в некоторой окрестности точки, 
 которое мы можем дать, будет константа: $\P(\xi \in [7,7.001]) \approx f(7) \cdot 0.001 = 0.005$.
@@ -2681,7 +2731,8 @@ $F_W(w) = \begin{cases}
     0, \text{ если } w < 0, \\
     6\sqrt{w}, \text{ если } w \in [0,0.25], \\
     1, \text{ если } w > 0.25.
-\end{cases}$ $f_W(w) = \begin{cases}
+\end{cases}$
+$f_W(w) = \begin{cases}
     \frac{3}{\sqrt{w}}, \text{ если } w \in [0,0.25], \\
     0, \text{ если } w \notin [0,0.25].
 \end{cases}$
@@ -2697,14 +2748,48 @@ $F_W(w) = \begin{cases}
 \begin{sol}
 Да, функция плотности может быть сколь угодно большой на достаточно маленьком отрезке.
 Предел функции плотности на бесконечности может быть либо равен нулю, либо не существовать. 
-Например, плотность может подниматься до значения равного одному, на отрезках убывающей длины, затем опускаться до нуля.
+Например, плотность может периодически подниматься до значения равного одному, на отрезках убывающей длины, затем опускаться до нуля.
 \end{sol}
 \addtag{функция плотности}
 \end{problem}
 
+
 \begin{problem}
- Функция плотности случайной величины  $X$ имеет
-вид:
+Закон распределения случайной величины $X$ задан таблицей
+
+\begin{tabular}{*{4}{c}}
+\toprule
+$t$ & $0$ & $1$ & $3$ \\
+\midrule
+$\P(X = t)$ & 0.1 & 0.2 & 0.7 \\
+\bottomrule
+\end{tabular}
+
+\begin{enumerate}
+\item Найдите $\P(X>1)$, $\E(X)$, $\E(X^2)$, $\Var(X)$, $\sigma_X$.
+\item Найдите $\E(X \mid X>1)$, $\E(X^2 \mid  X>1)$, $\Var(X \mid  X>1)$.
+\item Постройте графики функций $F^L(x) = P(X <x)$ и $F^R(x) = P(X \leq x)$.
+\item Есть ли у случайной величины $X$ функция плотности?
+\end{enumerate}
+\begin{sol}
+
+Случайная величина $X$ дискретная, следовательно, функции плотности не существует.
+
+$F_R(x) = \begin{cases}
+    0, \text{ если }x < 0, \\
+    0.1, \text{ если }x \in [0,1), \\
+    0.1 + 0.2, \text{ если }x \in [1,3), \\
+    0.1 + 0.2 + 0.7, \text{ если }x \geq 3. \\
+\end{cases}$
+
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+Функция плотности случайной величины  $X$ имеет
+вид
 \[
 f(t)=
 \begin{cases}
@@ -2712,20 +2797,19 @@ f(t)=
   0, t\notin [-2;2]
 \end{cases}
 \]
-Найдите:
 \begin{enumerate}
-\item $\P(X>1)$, $\E(X)$, $\E(X^{2})$, $\Var(X)$, $\sigma_{X}$
-\item $\E(X|X>1)$, $\E(X^{2}|X>1)$, $\Var(X|X>1)$
-\item Функцию распределения случайной величины $X$
-\item Медиану величины $X$, 40\%-ую квантиль величины $X$
+\item Найдите $\P(X>1)$, $\E(X)$, $\E(X^2)$, $\Var(X)$, $\sigma_X$.
+\item Найдите $\E(X \mid X>1)$, $\E(X^2 \mid X>1)$, $\Var(X \mid X>1)$.
+\item Найдите функцию распределения случайной величины $X$.
+\item Найдите медиану величины $X$, 40\%-ю квантиль величины $X$.
 \end{enumerate}
 \begin{sol}
 \end{sol}
 \end{problem}
 
 \begin{problem}
- Функция плотности случайной величины  $X$ имеет
-вид:
+Функция плотности случайной величины  $X$ имеет
+вид
 \[
 f(t)=
 \begin{cases}
@@ -2733,28 +2817,27 @@ f(t)=
   0, t\notin [0;4]
 \end{cases}
 \]
-Найдите:
 \begin{enumerate}
-\item $\P(X>1)$, $\E(X)$, $\E(X^{2})$, $\Var(X)$, $\sigma_{X}$
-\item $\E(X|X>1)$, $\E(X^{2}|X>1)$, $\Var(X|X>1)$
-\item Функцию распределения случайной величины $X$
-\item Медиану величины $X$, 40\%-ую квантиль величины $X$
+\item Найдите $\P(X>1)$, $\E(X)$, $\E(X^2)$, $\Var(X)$, $\sigma_{X}$.
+\item Найдите $\E(X \mid X>1)$, $\E(X^2 \mid X>1)$, $\Var(X \mid X>1)$.
+\item Найдите функцию распределения случайной величины $X$.
+\item Найдите медиану величины $X$, 40\%-ю квантиль величины $X$.
 \end{enumerate}
 \begin{sol}
 \end{sol}
 \end{problem}
 
 \begin{problem}
- Величина $X$ распределена на отрезке $[0;2]$ и имеет на нём функцию распределения $F(x)=x^2/4$. Найдите $\P(X\in [1;1.5])$, $\P(X<1)$, $F(-5)$, $F(10)$, функцию плотности величины $X$
+Величина $X$ распределена на отрезке $[0;2]$ и имеет на нём функцию распределения $F(x)=x^2/4$.
+
+Найдите $\P(X\in [1;1.5])$, $\P(X<1)$, $F(-5)$, $F(10)$, функцию плотности величины $X$.
 \begin{sol}
 
 $\P(X \in [1,1.5]) = F(1.5) - F(1) = \frac{2.25}{4} - \frac 14 = \frac{1.25}{4} = \frac{5}{16}$
 
-$\P(X < 1) = F(1) = \frac 14$
+$\P(X < 1) = F(1) = 1/4$
 
-$F(-5) = 0$
-
-$F(10) = 1$
+$F(-5) = 0$, $F(10) = 1$
 
 $f(x) = \begin{cases}
     \frac x2, \text{ если } x \in [0,2], \\
