--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2679,7 +2679,16 @@ $\P(\xi \in [x, x + \Delta x]) = f(x) \Delta x + o(\Delta x)$
 
 \begin{problem}
 Величина $X$ распределена на отрезке $[0;1]$ и на нём имеет функцию плотности $f(t)=3t^2$. 
-Найдите функции плотности и функции распределения величин $Y=\ln X$, $Z=X^2$, $W=(X-0.5)^2$.
+
+\begin{enumerate}
+ \item Постройте график функции плотности.
+ \item Найдите функцию распределения $X$ и постройте её график.
+ \item Найдите функции плотности и функции распределения величин $Y=\ln X$.
+ \item Найдите функции плотности и функции распределения величин $W=(X-0.5)^2$.
+ \item Найдите функции плотности и функции распределения величин $Z=X^2$.
+ \end{enumerate}
+
+
 \begin{sol}
 \[
   f(t) = \begin{cases}
@@ -2768,7 +2777,7 @@ $\P(X = t)$ & 0.1 & 0.2 & 0.7 \\
 \begin{enumerate}
 \item Найдите $\P(X>1)$, $\E(X)$, $\E(X^2)$, $\Var(X)$, $\sigma_X$.
 \item Найдите $\E(X \mid X>1)$, $\E(X^2 \mid  X>1)$, $\Var(X \mid  X>1)$.
-\item Постройте графики функций $F^L(x) = P(X <x)$ и $F^R(x) = P(X \leq x)$.
+\item Найдите функции $F^L(x) = P(X <x)$, $F^R(x) = P(X \leq x)$ и $u(x) = \P(X=x)$ и нарисуйте их график.
 \item Есть ли у случайной величины $X$ функция плотности?
 \end{enumerate}
 \begin{sol}
@@ -2798,9 +2807,10 @@ f(t)=
 \end{cases}
 \]
 \begin{enumerate}
+\item Постройте график функции плотности.
 \item Найдите $\P(X>1)$, $\E(X)$, $\E(X^2)$, $\Var(X)$, $\sigma_X$.
-\item Найдите $\E(X \mid X>1)$, $\E(X^2 \mid X>1)$, $\Var(X \mid X>1)$.
-\item Найдите функцию распределения случайной величины $X$.
+\item Найдите $\E(X \mid X>0)$, $\E(X^2 \mid X>0)$, $\Var(X \mid X>0)$.
+\item Найдите функции $F^L(x) = P(X <x)$, $F^R(x) = P(X \leq x)$ и $u(x) = \P(X=x)$ и нарисуйте их график.
 \item Найдите медиану величины $X$, 40\%-ю квантиль величины $X$.
 \end{enumerate}
 \begin{sol}
@@ -2818,9 +2828,10 @@ f(t)=
 \end{cases}
 \]
 \begin{enumerate}
-\item Найдите $\P(X>1)$, $\E(X)$, $\E(X^2)$, $\Var(X)$, $\sigma_{X}$.
-\item Найдите $\E(X \mid X>1)$, $\E(X^2 \mid X>1)$, $\Var(X \mid X>1)$.
-\item Найдите функцию распределения случайной величины $X$.
+\item Постройте график функции плотности.
+\item Найдите $\P(X < 1)$, $\E(X)$, $\E(X^2)$, $\Var(X)$, $\sigma_{X}$.
+\item Найдите $\E(X \mid X < 1)$, $\E(X^2 \mid X < 1)$, $\Var(X \mid X < 1)$.
+\item Найдите функции $F^L(x) = P(X <x)$, $F^R(x) = P(X \leq x)$ и $u(x) = \P(X=x)$ и нарисуйте их график.
 \item Найдите медиану величины $X$, 40\%-ю квантиль величины $X$.
 \end{enumerate}
 \begin{sol}
@@ -2847,22 +2858,6 @@ $f(x) = \begin{cases}
 \end{sol}
 \end{problem}
 
-\begin{problem}
- Если возможно, найдите функцию распределения и функцию плотности величины $X$ принимающей значения $1$, $2$, $3$ и $4$ с вероятностями $0.1$, $0.2$, $0.3$ и $0.4$ соответственно.
-\begin{sol}
-
-Случайная величина $X$ дискретная, следовательно, функции плотности не существует.
-
-$F(x) = \begin{cases}
-    0, \text{ если }x < 1, \\
-    0.1, \text{ если }x \in [1,2), \\
-    0.3, \text{ если }x \in [2,3), \\
-    0.6, \text{ если }x \in [3,4), \\
-    1, \text{ если }x \geq 4.
-\end{cases}$
-
-\end{sol}
-\end{problem}
 
 \begin{problem}
  Величина $X$ равномерна распределена\addtag{распределение!равномерное} на отрезке $[-2;1]$, 
@@ -2888,6 +2883,7 @@ $f_Y(y) = \begin{cases}
 \begin{problem}
  Глафира случайным образом равномерно\addtag{распределение!равномерное} выбирает случайную внутри треугольника с вершинами $(0;0)$, $(0;2)$ и $(3;3)$. 
  Пусть $X$ и $Y$ — абсцисса и ордината выбранной точки. 
+
  Найдите функцию плотности $X$, функцию плотности $Y$.
 \begin{sol}
 \end{sol}
