--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2646,11 +2646,11 @@ $ 2/3 $, $1/2$, $ 1/2 $, $ 14/27 $
 
 \begin{leftbar}
 У каждой случайной величины есть \textit{функция распределения}, $F_X(t) = \P(X \leq t)$, $\P(a < X \leq b) = F(b) - F(a)$.
-У \textit{абсолютно непрерывной случайной величины} есть \textit{функция плотности},
+Если у величины есть \textit{функция плотности}, то
 $f_X(t)$, $\P(X \in [a;b]) = \int_a^b f(t) dt$ или $\P(X \in [x; x+ \Delta]) \doteq f(x) \cdot \Delta$.
 
 
-Здесь мы популяризируем мощный стиль сэра Исаак Ньютона \autocite{newton1999principia} в современных обозначениях!
+Здесь мы популяризируем мощный стиль сэра Исаака Ньютона \autocite{newton1999principia} в современных обозначениях!
 Запись $a \doteq b$ означает, что величины $a$ и $b$ предельно равны, то есть $\lim_{\Delta \to 0} \frac{a}{b} = 1$.
 
 
@@ -2662,8 +2662,11 @@ $f_X(t)$, $\P(X \in [a;b]) = \int_a^b f(t) dt$ или $\P(X \in [x; x+ \Delta]) 
 Функция плотности случайной величины $X$ равна $5$ при $x=7$.
 Найдите примерно вероятность того, что $X$ попадёт в отрезок $[7;7.001]$.
 \begin{sol}
-Так как о функции плотности нам известно только её значение в точке, лучшим приближением значения в некоторой окрестности точки, 
-которое мы можем дать, будет константа: $\P(\xi \in [7,7.001]) \approx f(7) \cdot 0.001 = 0.005$.
+О функции плотности нам известно только её значение в точке.
+Мы можем посчитать интеграл только примерно:
+\[
+\P(\xi \in [7,7.001]) = \int_7^{7.001}f(t) \, dt \approx f(7) \cdot 0.001 = 5 \cdot 0.001 = 0.005.
+\]
 \end{sol}
 \addtag{функция плотности} 
 \end{problem}
@@ -2681,11 +2684,11 @@ $\P(\xi \in [x, x + \Delta x]) = f(x) \Delta x + o(\Delta x)$
 Величина $X$ распределена на отрезке $[0;1]$ и на нём имеет функцию плотности $f(t)=3t^2$. 
 
 \begin{enumerate}
- \item Постройте график функции плотности.
+ \item Постройте график её функции плотности.
  \item Найдите функцию распределения $X$ и постройте её график.
- \item Найдите функции плотности и функции распределения величин $Y=\ln X$.
- \item Найдите функции плотности и функции распределения величин $W=(X-0.5)^2$.
- \item Найдите функции плотности и функции распределения величин $Z=X^2$.
+ \item Найдите функции плотности и функции распределения величины $Y=\ln X$.
+ \item Найдите функции плотности и функции распределения величины $W=(X-0.5)^2$.
+ \item Найдите функции плотности и функции распределения величины $Z=X^2$.
  \end{enumerate}
 
 
@@ -2835,6 +2838,16 @@ f(t)=
 \item Найдите медиану величины $X$, 40\%-ю квантиль величины $X$.
 \end{enumerate}
 \begin{sol}
+\begin{enumerate}
+  \item $\P(X < 1) = 1/16$, $\E(X) = 8/3$, $\E(X^2)=8$, $\Var(X)=8/9$, $\sigma_{X}=\sqrt{8/9}$;
+  \item $\E(X \mid X < 1)= 2/3$, $\E(X^2 \mid X < 1)=1/2$, $\Var(X \mid X < 1)=1/18$;
+  \item $F^L(x) = F^R(x) = \begin{cases}
+    0, \text{ если } x < 0;
+    x^2/16, \text{ если } x \in [0;4];
+    1, \text{ если } x > 4.
+  \end{cases}$, $u(x) = 0$;
+  \item $q_{0.5} = \Med X = 2\sqrt{2}$, $q_{0.4} = 4\sqrt{10}/5$.
+  \end{enumerate}
 \end{sol}
 \end{problem}
 
