better cases in 9.7

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2842,9 +2842,9 @@ f(t)=
   \item $\P(X < 1) = 1/16$, $\E(X) = 8/3$, $\E(X^2)=8$, $\Var(X)=8/9$, $\sigma_{X}=\sqrt{8/9}$;
   \item $\E(X \mid X < 1)= 2/3$, $\E(X^2 \mid X < 1)=1/2$, $\Var(X \mid X < 1)=1/18$;
   \item $F^L(x) = F^R(x) = \begin{cases}
-    0, \text{ если } x < 0;
-    x^2/16, \text{ если } x \in [0;4];
-    1, \text{ если } x > 4.
+    0, \text{ если } x < 0 \\
+    x^2/16, \text{ если } x \in [0;4] \\
+    1, \text{ если } x > 4
   \end{cases}$, $u(x) = 0$;
   \item $q_{0.5} = \Med X = 2\sqrt{2}$, $q_{0.4} = 4\sqrt{10}/5$.
   \end{enumerate}
