--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -249,7 +249,7 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 % просто двойные буквы без всяких скобок \PP, \QQ, 
 
 % TODO: дооформить такую автоматику на CE(A || B), KL(X || B)?
-% TODO: как правильно оформлять | в условной плотности?
+% в условной плотности достаточно просто \mid 
 
 %\newcommand{\E}{\mathbb{E}}
 \NewDocumentCommand\E{sO{}r()}{%
