--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4158,19 +4158,28 @@ p(B | A) = \softmax\{ ...  \}.
 
 
 \begin{problem}
- Эксперимент может окончиться одним из шести исходов: \\
+Таблица совместного распределения пары величин $X$ и $Y$ имеет вид
 
 \begin{tabular}{*{4}{c}}
 \toprule
-& $X=-1$ & $X=0$ & $X=2$ \\
+& $X=-1$ & $X=0$ & $X=1$ \\
 \midrule
 $Y=0$ & 0.1 & 0.2 & 0.3  \\
-$Y=4$ & 0.2 & 0.1 & 0.1  \\
+$Y=1$ & 0.2 & 0.1 & 0.1.  \\
 \bottomrule
 \end{tabular}
 
+\begin{enumerate}
+\item Найдите дисперсии $\Var(X)$, $\Var(Y)$.
+\item Найдите ковариацию $\Cov(X,Y)$, корреляцию $\Corr(X,Y)$ и условную $\Cov(X,Y | X\geq 0)$.
+\end{enumerate}
 
-Найдите: $\Var(X)$, $\Var(Y)$, $\Cov(X,Y)$, $\Corr(X,Y)$, $\Cov(X,Y | X\geq 0)$.
+Обозначим сумму величин $X$ и $Y$ буквой $S$, $S = X+Y$.
+
+\begin{enumerate}[resume]
+\item Выпишите таблицу совместного распределения пары $(X, S)$.
+\item Выпишите таблицу распределения $S$.
+\end{enumerate}
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -4216,8 +4225,7 @@ $Y=4$ & 0.2 & 0.1 & 0.1  \\
 
 
 \begin{problem}
-Кубик подбрасывается $n$
-раз. 
+Кубик подбрасывается $n$ раз. 
 
 Пусть $X_1$ — число выпадений 1, а $X_6$ — число выпадений 6.
 
@@ -4411,11 +4419,11 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 
 
 \begin{problem}
- Величины $X$ и $Y$ имеют совместную функцию плотности
+Величины $X$ и $Y$ имеют совместную функцию плотности
 \[
 f(x,y)=\begin{cases}
 4xy, \; 0<x<1, \, 0<y<1\\
-0, \text{ иначе }
+0, \text{ иначе }.
 \end{cases}
 \]
 
@@ -4426,6 +4434,15 @@ f(x,y)=\begin{cases}
 \item Зависимы ли величины $X$ и $Y$?
 \item Найдите совместную функцию распределения $F(x, y)$.
 \end{enumerate}
+
+Обозначим сумму величин $X$ и $Y$ буквой $S$, $S = X+Y$.
+
+\begin{enumerate}[resume]
+\item Найдите совместную плотность пары величин $(X, S)$.
+\item Найдите плотность случайной величины $S$.
+\end{enumerate}
+
+
 \begin{sol}
 \end{sol}
 \end{problem}
