update joint distribution

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4170,6 +4170,7 @@ $Y=1$ & 0.2 & 0.1 & 0.1.  \\
 \end{tabular}
 
 \begin{enumerate}
+\item Найдите ожидания $\E(X)$, $\E(Y)$ и медианы $\Med X$, $\Med Y$.
 \item Найдите дисперсии $\Var(X)$, $\Var(Y)$.
 \item Найдите ковариацию $\Cov(X,Y)$, корреляцию $\Corr(X,Y)$ и условную $\Cov(X,Y | X\geq 0)$.
 \end{enumerate}
