--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3431,7 +3431,7 @@ X, \text{ если } X\geq a.\\
 Какова вероятность того, что третий промах придётся на седьмой выстрел?
 \begin{sol}
   Среди первых шести выстрелов должно быть ровно два промаха и четыре попадания. 
-  Шестым выстрелом должен идти промах, $\P(A) = C_6^2 0.3^4 0.7^3$.
+  Седьмым выстрелом должен идти промах, $\P(A) = C_6^2 0.7^2 0.3^4 \cdot 0.7$.
 \end{sol}
 \end{problem}
 
