var x + var y = var s

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3532,7 +3532,15 @@ X, \text{ если } X\geq a.\\
 
 
 \begin{problem}
- Из грота ведут 10 штреков, с длинами 100м, 200м, \ldots 1000м. Самый длинный штрек оканчивается выходом на поверхность. Остальные — тупиком. Вася выбирает штреки наугад, в тупиковый штрек два раза не ходит. Какова вероятность того, что Вася посетит самый короткий штрек? Какой в среднем путь он нагуляет прежде чем выберется на поверхность?
+ Из грота ведут 10 штреков, с длинами 100м, 200м, \ldots 1000м. 
+ Самый длинный штрек оканчивается выходом на поверхность. 
+ Остальные — тупиком. Вася выбирает штреки наугад, в тупиковый штрек два раза не ходит. 
+ 
+ \begin{enumerate}
+  \item Какова вероятность того, что Вася посетит самый короткий штрек? 
+  \item Какой в среднем путь он нагуляет прежде чем выберется на поверхность?
+ \end{enumerate}
+
 % дисперсия здесь громоздкая
 \begin{sol}
 \end{sol}
@@ -3541,15 +3549,26 @@ X, \text{ если } X\geq a.\\
 
 \begin{problem}
 
-У Маши 30 разных пар туфель. И она говорит, что мало! Пёс
-Шарик утащил без разбору на левые и правые 17 туфель. Какова вероятность того, что у Маши останется ровно 13 полных пар? Величина $X$ — количество полных целых оставшихся пар, $Y$ — количество полных пар, доставшихся Шарику. Найдите $\E(X)$, $\E(Y)$, $\Var(X)$, $\Var(Y)$.
+У Маши 30 разных пар туфель. И она говорит, что мало! 
+Пёс Шарик утащил 17 туфель без разбору на левые и правые. 
+Величина $X$ — количество полных целых оставшихся пар у Маши, $Y$ — количество полных пар, доставшихся Шарику. 
+
+\begin{enumerate}
+  \item Какова вероятность того, что у Маши останется ровно 13 полных пар? 
+  \item Найдите $\E(X)$, $\E(Y)$, $\Var(X)$, $\Var(Y)$.
+\end{enumerate}
+
 \begin{sol}
 \end{sol}
 \end{problem}
 
 \begin{problem}
+У меня в кармане 3 рубля мелочью. 
+Среди монет всего одна монета достоинством 50 копеек. 
+Я извлекаю монеты по одной наугад. 
+Я останавливаюсь после того, как извлеку монету в 50 копеек. 
 
-У меня в кармане 3 рубля мелочью. Среди монет всего одна монета достоинством 50 копеек. Я извлекаю монеты по одной наугад. Я останавливаюсь после того, как извлеку монету в 50 копеек. Какую сумму в среднем я извлеку?
+Какую сумму в среднем я извлеку?
 \begin{sol}
 $1.75$
 \end{sol}
@@ -3557,11 +3576,13 @@ $1.75$
 
 \begin{problem}
  «Модница».
-В шкатулке у Маши 100 пар серёжек. Каждый день утром она выбирает одну пару наугад, носит ее, а вечером возвращает в шкатулку. Проходит год.
+В шкатулке у Маши 100 пар серёжек. 
+Каждый день утром она выбирает одну пару наугад, носит ее, а вечером возвращает в шкатулку. 
+Проходит год.
 \begin{enumerate}
 \item Сколько в среднем пар окажутся ни разу не надетыми?
 \item Сколько в среднем пар окажутся надетыми не менее двух раз?
-\item[(c*)] Как изменятся ответы, если каждый день Маша покупает себе новую пару серёжек и вечером добавляет её в шкатулку?
+\item (*) Как изменятся ответы, если каждый день Маша покупает себе новую пару серёжек и вечером добавляет её в шкатулку?
 \end{enumerate}
 \begin{sol}
   $\E(X_0)=100\cdot \frac{99}{464} + \frac{100}{464} + \ldots + \frac{464}{464}$
@@ -3569,10 +3590,13 @@ $1.75$
 \end{problem}
 
 \begin{problem}
-
 Вовочка\addtag{герои!Вовочка} получает пятерку с вероятностью 0.1, четверку — с вероятностью 0.2, тройку — с вероятностью — 0.3 и двойку с вероятностью 0.4. 
-В этом четверти он писал 20 контрольных. Какова вероятность того, что все оценки у Вовочки одинаковые? 
-Сколько разных оценок он в среднем получит?
+В этом четверти он писал 20 контрольных. 
+\begin{enumerate}
+  \item Какова вероятность того, что все оценки у Вовочки одинаковые? 
+  \item Сколько разных оценок он в среднем получит?
+\end{enumerate}
+
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -3582,6 +3606,8 @@ $1.75$
 У Дон Жуана  $n$  знакомых женщин и их всех зовут по-разному.
 Он пишет им  $n$  писем, но, по рассеянности, раскладывает их в конверты наугад. 
 Величина  $X$  обозначает количество женщин, получивших письма, написанные лично для них.
+
+
 Найдите  $\E(X)$, $\Var(X)$.
 \begin{sol}
 $\E(X)=1$, $\Var(X)=1$
@@ -3589,38 +3615,46 @@ $\E(X)=1$, $\Var(X)=1$
 \end{problem}
 
 \begin{problem}
- Над озером взлетело 20 уток. Каждый из 10 охотников один раз
-стреляет в случайно выбираемую им утку. Величина $Y$ — количество убитых уток, $X$ — количество попавших в цель охотников. 
-Найдите $\E(X)$, $\Var(X)$, $\E(Y)$, $\Var(Y)$, если охотники стреляют без промаха. 
-Как изменится ответ, если вероятность попадания равна $0.7$?
+ Над озером взлетело 20 уток. 
+ Каждый из 10 охотников один раз стреляет в случайно выбираемую им утку. 
+ Величина $Y$ — количество убитых уток, $X$ — количество попавших в цель охотников. 
+
+\begin{enumerate}
+  \item Найдите $\E(X)$, $\Var(X)$, $\E(Y)$, $\Var(Y)$, если охотники стреляют без промаха. 
+  \item Как изменятся ответы, если вероятность попадания равна $0.7$?
+\end{enumerate}
+ 
 \begin{sol}
 $\E(Y)=20-20 \left( \frac{19}{20} \right)^{10}\approx 8.025$
 \end{sol}
 \end{problem}
 
 \begin{problem}
- Вокруг новогодней ёлки танцуют хороводом 27 детей. 
- Мы считаем, что ребенок высокий, если он выше обоих своих соседей. 
- Величина $X$ — количество высоких детей в хороводе. Найдите $\E(X)$, $\Var(X)$. 
- Вероятность совпадения роста будем считать равной нулю.
+ Вокруг новогодней ёлки танцуют хороводом 27 детей разного роста.
+ Мы считаем, что ребенок высокий, если он выше обоих своих соседей по хороводу.
+ Величина $X$ — количество высоких детей в хороводе. 
+
+ Найдите $\E(X)$, $\Var(X)$. 
 \begin{sol}
 $\E(X)=9$, $\Var(X)=1.2$
 \end{sol}
 \end{problem}
 
 \begin{problem}
- По 10 коробкам наугад раскладывают 7 карандашей. Каково
-среднее количество пустых коробок? Дисперсия?
+ По 10 коробкам наугад раскладывают 7 карандашей. 
+ 
+Каково среднее количество пустых коробок? Дисперсия?
 \begin{sol}
   $10 \cdot 0.9^7$
 \end{sol}
 \end{problem}
 
 \begin{problem}
- Внутри каждой упаковки шоколадки находится наклейка
-с изображением одного из 30 животных. Предположим, что все
-наклейки равновероятны, величина $X$ — это количество шоколадок, которые
-купить, чтобы собрать полную коллекцию наклеек. Чему равны $\E(X)$, $\Var(X)$? 
+ Внутри каждой упаковки шоколадки находится наклейка с изображением одного из 30 животных. 
+Предположим, что все наклейки равновероятны, величина $X$ — это количество шоколадок, 
+которые купить, чтобы собрать полную коллекцию наклеек. 
+
+Чему равны $\E(X)$, $\Var(X)$? 
 
 Как это объяснить ребёнку?
 \begin{sol}
@@ -3631,15 +3665,18 @@ $\E(X)=9$, $\Var(X)=1.2$
 \end{problem}
 
 \begin{problem}
- Из колоды в 52 карты извлекается 5 карт. Сколько в среднем
-извлекается мастей? Достоинств? Тузов? Дисперсии этих величин?
+ Из колоды в 52 карты извлекается 5 карт. 
+ Сколько в среднем извлекается мастей? Достоинств? Тузов? 
+ Дисперсии этих величин?
 \begin{sol}
 \end{sol}
 \end{problem}
 
 \begin{problem}
  За круглым столом сидят в случайном порядке $n$ супружеских пар, всего — $2n$ человек. 
- Величина $X$ — число пар, где супруги оказались напротив друг друга. Найдите $\E(X)$ и $\Var(X)$.
+ Величина $X$ — число пар, где супруги оказались напротив друг друга. 
+ 
+ Найдите $\E(X)$ и $\Var(X)$.
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -3647,7 +3684,10 @@ $\E(X)=9$, $\Var(X)=1.2$
 \begin{problem}
  В задачнике $N$ задач. Из них $a$ — Вася умеет решать, а остальные не умеет. 
  На экзамене предлагается равновероятно выбираемые $n$ задач. 
- Величина $X$ — число решенных Васей задач на экзамене. Найдите $\E(X)$ и $\Var(X)$.
+ Величина $X$ — число решенных Васей задач на экзамене. 
+ 
+ 
+Найдите $\E(X)$ и $\Var(X)$.
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -3656,11 +3696,54 @@ $\E(X)=9$, $\Var(X)=1.2$
  Кубик подбрасывается $n$ раз. Величина $X_1$ — число выпадений 1, а $X_6$ — число выпадений 6. 
  Найдите $\Corr(X_1, X_6)$.
 \begin{sol}
+  Заметим, что сумма $X_1 + X_2 + \ldots + X_6 = 0$, поэтому $\Cov(X_1, X_1 + X_2 + \ldots + X_6) = 0$.
+  В силу симметрии, $\Cov(X_1, X_2) = - \Var(X_1) / 5$.
+  Следовательно, $\Corr(X_1, X_6) = -1/5$.
 \end{sol}
 \end{problem}
 
 
 \begin{problem}
+  Величина $X$ равновероятно принимает значения $0$ и $1$. 
+  Величина $Y$ равномерно принимает значения от $0$ до $1$. 
+  Величины $X$ и $Y$ независимы. 
+  Сева не умеет интегрировать, но знает свойства дисперсии. 
+  Помогите Севе найти дисперсию $Y$:
+  \begin{enumerate}
+    \item Найдите дисперсию $\Var(X)$.
+    \item Как распределена величина $S = X+Y$?
+    \item Во сколько раз дисперсия $\Var(S)$ больше дисперсии $\Var(X)$?
+    \item Найдите $\Var(Y)$ без интегрирования. 
+  \end{enumerate} 
+
+  \begin{sol}
+  \end{sol}
+\end{problem}
+
+
+\begin{problem}
+  Величина $X$ равновероятно принимает значения $1$, $2$, \ldots, $n$. 
+  Величина $Y$ равномерно принимает значения от $0$ до $1$. 
+  Величины $X$ и $Y$ независимы. 
+  Слава помнит дисперсию равномерной случайной величины наизусть, знает свойства дисперсии,
+  но не знает формулы суммы квадратов. 
+  Помогите Славе найти дисперсию $X$:
+  \begin{enumerate}
+    \item Найдите дисперсию $\Var(Y)$.
+    \item Как распределена величина $S = X+Y$?
+    \item Найдите дисперсию $\Var(S)$.
+    \item Найдите $\Var(X)$ без использования формулы для суммы квадратов. 
+    \item Предложите доказательство формулы для суммы квадратов, основанное на равномерном распределении. 
+  \end{enumerate} 
+
+  \begin{sol}
+  \end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+  % TODO: эта задача тут не к месту, но не знаю, куда ее деть!
 Случайная величина $X$ равновероятно принимает значения $1$, $2$ и $3$.
 
 Найдите $\P(\E(\P(\P(X=7)=0))=1)$ и $\E(\E(\E(\P(\P(X=1)=1))))$.
@@ -3749,12 +3832,16 @@ f(y)=\begin{cases}
 
 
 \begin{problem}
- Маша и Саша пошли в лес по грибы. Саша собирает все
-грибы, а Маша — только подберезовики. Саша в среднем находит один
-гриб за одну минуту, Маша — один гриб за десять минут. Какова
-вероятность того, за 8 минут они найдут ровно 13 грибов? Какова
-вероятность того, что следующий гриб им попадется позже, чем через
-минуту, если Маша только что нашла подберезовик?
+Маша и Саша пошли в лес по грибы. 
+Саша собирает все грибы, а Маша — только подберезовики. 
+Саша в среднем находит один гриб за одну минуту, Маша — один гриб за десять минут. 
+
+\begin{enumerate}
+\item Какова вероятность того, за 8 минут они найдут ровно 13 грибов?
+\item Какова вероятность того, что следующий гриб им попадется позже, 
+чем через минуту, если Маша только что нашла подберезовик?
+\end{enumerate}
+
 \begin{sol}
   $\P(X_8=13)=e^{-8.8}8.8^{13}/13!\approx 0.046$
 
@@ -3763,24 +3850,31 @@ f(y)=\begin{cases}
 \end{problem}
 
 \begin{problem}
-  Пост майора ГИБДД Иванова И.И. в среднем ловит одного
-нарушителя в час. Какова вероятность того, за первые полчаса дежурства будет не меньше двух нарушителей?
-Какова вероятность того, что следующего нарушителя ждать еще более 40 минут, если уже целых три часа никто не превышал скорость?
+Пост майора ГИБДД Иванова И.И. в среднем ловит одного нарушителя в час. 
+\begin{enumerate}
+  \item Какова вероятность того, за первые полчаса дежурства будет не меньше двух нарушителей?
+  \item Какова вероятность того, что следующего нарушителя ждать еще более 40 минут, 
+  если уже целых три часа никто не превышал скорость?
+\end{enumerate}
+
 \begin{sol}
 \end{sol}
 \end{problem}
 
 \begin{problem}
- Оля и Юля пишут смс Маше. Оля отправляет Маше в среднем 5 смс
-в час. Юля отправляет Маше в среднем 2 смс в час. Какова
-вероятность того, что Маша получит ровно 6 смс за час? Сколько
-времени в среднем проходит между смс, получаемыми Машей от подруг?
+Оля и Юля пишут смс Маше. Оля отправляет Маше в среднем 5 смс в час. 
+Юля отправляет Маше в среднем 2 смс в час. 
+\begin{enumerate}
+  \item Какова вероятность того, что Маша получит ровно 6 смс за час?
+  \item Сколько времени в среднем проходит между смс, получаемыми Машей от подруг?
+\end{enumerate}
+ 
 \begin{sol}
 \end{sol}
 \end{problem}
 
 \begin{problem}
- Кузнечики на большой поляне распределены
+Кузнечики на большой поляне распределены
 по пуассоновскому закону\addtag{распределение!Пуассона}, в среднем 3 кузнечика на квадратный метр. Какой
 следует взять сторону квадрата, чтобы вероятность найти в нем хотя
 бы одного кузнечика была равна  $0,8$?
@@ -3791,7 +3885,7 @@ f(y)=\begin{cases}
 \begin{problem}
  В магазине две кассирши (ах, да! две хозяйки кассы). 
  Допустим, что время обслуживания клиента распределено экспоненциально. 
- Тетя Зина обслуживает в среднем $5$ клиентов в час, а тетя Маша - $7$. 
+ Тетя Зина обслуживает в среднем $5$ клиентов в час, а тетя Маша — $7$. 
  Два клиента подошли к кассам одновременно.
 \begin{enumerate}
 \item Какова вероятность того, что тетя Зина обслужит клиента быстрее?
@@ -3845,17 +3939,23 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
 \end{problem}
 
 \begin{problem}
- В гирлянде 25 лампочек. Вероятность брака для отдельной
-лампочки равна 0,01. Какова вероятность того, что гирлянда
-полностью исправна? Оцените точность ответа при использовании распределения Пуассона\addtag{распределение!Пуассона}.
+В гирлянде 25 лампочек. 
+Вероятность брака для отдельной лампочки равна 0,01. 
+\begin{enumerate}
+  \item Какова вероятность того, что гирлянда полностью исправна? 
+  \item Оцените точность ответа при использовании распределения Пуассона\addtag{распределение!Пуассона}.
+\end{enumerate}
 \begin{sol}
 \end{sol}
 \end{problem}
 
 \begin{problem}
  По некоему предмету незачет получило всего 2\% студентов.
-Какова вероятность того, что в группе из 50 студентов будет ровно
-1 человек с незачетом? Оцените точность ответа при использовании распределения Пуассона\addtag{распределение!Пуассона}.
+ \begin{enumerate}
+  \item Какова вероятность того, что в группе из 50 студентов будет ровно один человек с незачетом?
+  \item Оцените точность ответа при использовании распределения Пуассона\addtag{распределение!Пуассона}.
+ \end{enumerate}
+ 
 \begin{sol}
 \end{sol}
 \end{problem}
