--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -68,7 +68,7 @@
 \makeindex[intoc,title={Модные хэштэги}] % [title=Модные хэштэги, intoc]
 % TODO: лишняя пустая страница в printindex
 
-\usepackage{etex} % расширение классического tex
+%\usepackage{etex} % расширение классического tex
 % в частности позволяет подгружать гораздо больше пакетов, чем мы и займёмся далее
 
 \usepackage{verbatim} % для многострочных комментариев
@@ -6402,6 +6402,81 @@ $Y_1 \leq Y_2 \leq \ldots \leq Y_{10}$.
 \[
 (1+x)^{a}=\sum_{k=0}^{\infty} C_a^k x^k, \; \text{ где } C_a^k=\frac{a(a-1)(a-2)\cdot \ldots \cdot (a-k+1)}{k!}
 \]
+
+\begin{problem}
+  Монетку подбрасывают пять раз. 
+  Рассмотрим множество всех исходов $\Omega = \{HHHHH, \dots, TTTTT\}$.
+\begin{enumerate}
+  \item Опишите данное множество слов с помощью производящей функции. 
+  \item Опишите данное множество слов с помощью регулярных выражений. 
+\end{enumerate}
+\begin{sol}
+\end{sol}
+
+\end{problem}
+
+\begin{problem}
+  Монетку подбрасывают до первого орла. 
+  Рассмотрим множество всех исходов $\Omega = \{T, HT, HHT, \dots\}$.
+\begin{enumerate}
+  \item Опишите данное множество слов с помощью производящей функции. 
+  \item Опишите данное множество слов с помощью регулярных выражений. 
+\end{enumerate}
+\begin{sol}
+\end{sol}
+
+\end{problem}
+
+\begin{problem}
+  Монетку подбрасывают до выпадения последовательности $HTH$. 
+  Рассмотрим множество всех исходов $\Omega = \{HTH, HHTH, THTH, \dots\}$.
+\begin{enumerate}
+  \item Опишите данное множество слов с помощью производящей функции. 
+  \item Опишите данное множество слов с помощью регулярных выражений. 
+\end{enumerate}
+\begin{sol}
+\end{sol}
+
+\end{problem}
+
+
+\begin{problem}
+  Илон Маск стартует на числовой прямой в точке $X_0 = 0$.
+  За один шаг он перемещается вправо с вероятностью $0.6$ и влево с вероятностью $0.4$.
+
+  Рассмотрим множество всех траекторий, начинающихся в $0$ и заканчивающихся первым посещением точки $1$,
+   $A = \{R, LRR, LRLRR, LLRRR, \dots\}$.
+\begin{enumerate}
+  \item Составьте уравнение на производящую функцию для множества $A$.
+  \item Опишите множество слов $A$ с помощью регулярных выражений. 
+  \item Найдите закон распределения числа шагов до первого посещения точки $1$ Маском. 
+\end{enumerate}
+\begin{sol}
+\end{sol}
+  
+\end{problem}
+
+\begin{problem}
+Алиса и Боб подкидывают монетку неограниченное количество раз. 
+Алиса выигрывает если $HHT$ выпадает раньше, Боб — если $HTH$ выпадает раньше. 
+
+Рассмотрим три множества: $A$ — множество финальных позиций, где выиграла Алиса,
+$B$ — множество финальных позиций, где выиграл Боб, $C$ — множество неоконченных партий.
+\begin{enumerate}
+  \item Приведите по несколько примеров слов из $A$, $B$ и $C$.
+  \item Является ли множество слов $A$ событием? 
+  Что получится, если в производящую функцию множества слов $A$ подставить вероятности?
+  \item Является ли множество слов $C$ событием?
+  Что получится, если в производящую функцию множества слов $C$ подставить вероятности?
+  \item Найдите вероятности победы Алиса и Боба.
+  \item Найдите ожидаемую продолжительность игры.
+\end{enumerate}
+
+\begin{sol}
+\end{sol}
+  
+\end{problem}
+
 
 
 \begin{problem}
