--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -993,17 +993,20 @@ p = \frac{1}{6} + \frac{5}{6}\cdot\frac{5}{6}\cdot p, \quad p = \frac{6}{11}
 \end{problem}
 
 \begin{problem}
- Вы играете в следующую игру. Кубик подкидывается неограниченное число раз.
+Маша и Даша играют в следующую игру. 
+ Правильный кубик подкидывают неограниченное число раз.
  Если на кубике\addtag{кубик} выпадает 1, 2 или 3, то соответствующее количество монет добавляется на кон.
- Если выпадает 4 или 5, то игра оканчивается и Вы получаете сумму, лежащую на кону.
- Если выпадает 6, то игра оканчивается, а Вы не получаете ничего. Изначально на кону лежит ноль рублей.
+ Если выпадает 4 или 5, то игра оканчивается и Маша получает сумму, лежащую на кону.
+ Если выпадает 6, то игра оканчивается и Даша получает сумму, лежащую на кону. 
+ Изначально на кону лежит ноль рублей.
 \begin{enumerate}
 \item Какова вероятность того, что игра рано или поздно закончится выпадением 6-ки?
 \item Какова ожидаемая продолжительность игры?
-\item Чему равен ожидаемый выигрыш?
-\item Чему равен ожидаемый выигрыш, если изначально на кону лежит 100 рублей?
+\item Чему равен ожидаемый выигрыш Маши и ожидаемый выигрыш Даши?
+\item Чему равны ожидаемые расходы организаторов игры?
+\item Чему равен ожидаемый выигрыш Маши, если изначально на кону лежит 100 рублей?
 \item Изменим изначальное условие: если выпадает 5, то сумма на кону сгорает, а игра продолжается.
-Чему будет равен средний выигрыш в новую игру?
+Чему будет равен средний выигрыш Маши и средний выигрыш Даши в новую игру?
 \end{enumerate}
 \begin{sol}
 \begin{enumerate}
@@ -1018,24 +1021,27 @@ p = \frac{1}{6} + \frac{5}{6}\cdot\frac{5}{6}\cdot p, \quad p = \frac{6}{11}
     Если выпадает \textcircled{1}, \textcircled{2} или \textcircled{3},
     то мы как бы начинаем точно такую же игру, с теми же вероятностями и тем же математическим ожиданием выигрыша,
     но сумма на кону на 1, 2 или 3 рубля больше.
-    Ещё не факт, что мы их получим, поэтому домножаем на вероятность забрать выигрыш:
+    Ещё не факт, что Маши их получит, поэтому домножаем на вероятность забрать выигрыш:
     \[
-      \E(S) = 1/6(\E(S) + \mu) + 1/6(\E(S) + 2 \cdot \mu) + 1/6(\E(S) + 3  \cdot  \mu) + 1/6  \cdot  0 + 1/6  \cdot  0 + 1/6  \cdot  0 = 1\frac{1}{3},
+      \E(M) = 1/6(\E(M) + \mu) + 1/6(\E(M) + 2 \cdot \mu) + 1/6(\E(M) + 3  \cdot  \mu) + 1/6  \cdot  0 + 1/6  \cdot  0 + 1/6  \cdot  0 = 1\frac{1}{3},
     \]
     где $\mu$ — вероятность забрать накоп раньше, чем он сгорит (2/3).
+    Для Даши можно составить уравнение по аналогии или заметить, что $\E(D) = \E(M) / 2$.
 
+    \item Ожидаемые расходы организаторов равны $\E(S) = \E(M) + \E(D)$.
     \item Меняются слагаемые для \textcircled{4} и \textcircled{5} — на первом шаге мы получим 100:
     \[
-      \E(S) = 1/6(\E(S) + \mu) + 1/6(\E(S) + 2 \cdot \mu) + 1/6(\E(S) + 3  \cdot  \mu) + 1/6  \cdot  100 + 1/6  \cdot  100 + 1/6  \cdot  0 = 68
+      \E(M) = 1/6(\E(M) + \mu) + 1/6(\E(M) + 2 \cdot \mu) + 1/6(\E(M) + 3  \cdot  \mu) + 1/6  \cdot  100 + 1/6  \cdot  100 + 1/6  \cdot  0 = 68
     \]
 
     \item Меняется только слагаемое для \textcircled{5} — игра продолжится с теми же вероятностями и тем же математическим ожиданием выигрыша:
     \[
-      \E(S) = 1/6(\E(S) + \mu) + 1/6(\E(S) + 2 \cdot \mu) + 1/6(\E(S) + 3  \cdot  \mu) + 1/6  \cdot  0 + 1/6  \cdot  \E(S) + 1/6  \cdot  0 = 2
+      \E(M) = 1/6(\E(M) + \gamma) + 1/6(\E(M) + 2 \cdot \gamma) + 1/6(\E(M) + 3  \cdot  \gamma) + 1/6  \cdot  0 + 1/6  \cdot  \E(M) + 1/6  \cdot  0 = 2
     \]
+    На этот раз $\gamma = 1/3$ и $\E(D) = \E(M)$.
 \end{enumerate}
 
-Альтернативное решение: кладём $m$ рублей в карман («несгораемая сумма») и игра продолжается, получаем $1/6(\E(S) + m)$.
+% TODO: возможно добавить вариант с выдачей денег на руки, чтобы студенты сами увидели разницу между деньгами на кону и в кармане
 
 \end{sol}
 \end{problem}
@@ -2464,8 +2470,8 @@ $\cF=\{\emptyset, \Omega, \{\text{дождь}\}, \{\text{солнечно}, \tex
 \end{problem}
 
 \begin{problem}
-  Два охотника одновременно выстрелили в одну утку. Первый попадает с
-вероятностью 0.4, второй — с вероятностью 0.7 независимо от первого.
+Два охотника одновременно выстрелили в одну утку. 
+Первый попадает с вероятностью 0.4, второй — с вероятностью 0.7 независимо от первого.
 \begin{enumerate}
 \item Какова вероятность того, что в утку попала ровно одна пуля?
 \item  Какова условная вероятность того, что утка была убита первым
@@ -3556,7 +3562,7 @@ X, \text{ если } X\geq a.\\
 
 
 \begin{problem}
- Из грота ведут 10 штреков, с длинами 100м, 200м, \ldots 1000м. 
+ Из грота ведут 10 штреков, с длинами 100м, 200м, \ldots, 1000м. 
  Самый длинный штрек оканчивается выходом на поверхность. 
  Остальные — тупиком. Вася выбирает штреки наугад, в тупиковый штрек два раза не ходит. 
  
@@ -3641,6 +3647,7 @@ $\E(X)=1$, $\Var(X)=1$
 \begin{problem}
  Над озером взлетело 20 уток. 
  Каждый из 10 охотников один раз стреляет в случайно выбираемую им утку. 
+ Охотники целятся одновременно, поэтому несколько охотников могут выбрать одну и ту же утку.
  Величина $Y$ — количество убитых уток, $X$ — количество попавших в цель охотников. 
 
 \begin{enumerate}
