--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1763,15 +1763,15 @@ $\P({b}) = \P({a,b}) - \P({a}) = \P({b,c}) - \P({c}) = 0.5$
 
 Теперь предположим, что Дон Жуан набрал в едином текстовом файле $n$ будущих сообщений, каждое из которых адресовано одной знакомой ему женщине. 
 По рассеянности, Дон Жуан отправляет в Телеграме каждой женщине случайно выбираемое сообщение из файла.
-При каждая женщина получит ровно одно сообщение, но несколько женщин могут получить одно и то же сообщение.  
+При этом каждая женщина получит ровно одно сообщение, но несколько женщин могут получить одно и то же сообщение.  
 
-\begin{enumerate}
+\begin{enumerate}[resume]
   \item Как изменятся ответы на предыдущие вопросы?
 \end{enumerate}
 
 \begin{sol}
   \begin{enumerate}
-    \item 
+    \item $\P(X_n \geq 1) = 1 - 1/2! + 1/3! - 1/4! + 1/5! - \dots + (-1)^{n+1} 1/n!$
     \item $1 - 1/e$
     \item $1$
     \item Предел и ожидание никак не изменятся, $\E_P(X_n) = \E_Q(X_n) = 1$.
