--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3358,7 +3358,21 @@ X, \text{ если } X\geq a.\\
 \end{problem}
 
 
+\begin{problem}
+Илон Маск гоняет на Cybertruck по окружности единичного радиуса с центром в начале координат.
+В случайный момент времени момент времени он останавливается, точка его остановки равномерно распределена на окружности.
+Обозначим абсциссу точки остановки с помощью $X$.
+\begin{enumerate}
+  \item Найдите вероятность $\P(X \in [x; x+ \Delta])$ с точностью до о-малого от $\Delta$ из геометрических соображений.
+  \item Найдите функцию плотности и функцию распределения величины $X$.
+\end{enumerate}
 
+\begin{sol}
+  \[
+  \P(X \in [x; x + \Delta]) = \frac{1}{\sqrt{1 - x^2}}\Delta + o(\Delta).
+  \]
+\end{sol}
+\end{problem}
 
 
 \newpage
